# cpp-dcfr

./: README.md  TESTING_GUIDE.md  debug_tensor_dimensions.py  requirements.txt  run_ablation_studies.sh  simple_speed_test.py
bench/: README.md  benchmark.py  benchmark_comparison.py  benchmark_fixed_training.py  benchmark_simple.py  create_chart.py
bench/bench/results/: benchmark_simple_1756257773.json  profile_state_encoding_1756257773.txt
bench/results/: benchmark_simple_1756258968.json  comparison_results_1756258099.json  performance_summary.csv
configs/ablate/: adamw_clip.yaml  baseline.yaml  cosine_amp.yaml  norm_targets.yaml
cpp/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
cpp/.github/workflows/: ci.yml
cpp/benchmarks/: CMakeLists.txt  bench_deep_cfr.cpp  bench_main.cpp  bench_model.cpp  bench_python_parity.cpp  python_utils.py
cpp/bindings/: setup.py
cpp/bindings/deepcfr/: __init__.py
cpp/docs/: MIGRATION_GUIDE.md  PERFORMANCE_GUIDE.md
cpp/include/deepcfr/core/: deep_cfr.h
cpp/include/deepcfr/model/: model.h
cpp/include/deepcfr/pokers/: pokers.h
cpp/rust-bridge/: Cargo.toml  build.rs
cpp/rust-bridge/src/: lib.rs
cpp/src/apps/: CMakeLists.txt  play.cpp  train.cpp
cpp/src/libbindings/: CMakeLists.txt  bindings.cpp
cpp/src/libcore/: CMakeLists.txt  deep_cfr.cpp  model.cpp  pokers.cpp
cpp/tests/: CMakeLists.txt  test_deep_cfr.cpp  test_main.cpp  test_model.cpp
cpp/tests/parity/: CMakeLists.txt  agent_parity_test.cpp  parity_test_main.cpp  python_utils.py  state_parity_test.cpp
docs/: neural_network_convergence_accelerator.md  perf_report.md
scripts/: quick_test.py  validate_convergence.py
src/core/: deep_cfr.py  enhanced_deep_cfr.py  enhanced_model.py  model.py  optimized_deep_cfr.py  optimized_model.py
src/training/: train_enhanced.py  train_optimized.py
src/utils/: config.py
tests/: test_optimizations.py
